# Zero

./: configure.ac  meson.build
src/: dummy.cpp  meson.build  paymentdisclosure.h  serialize.h
src/crypto/: meson.build
src/crypto/pch/: crypto_pch.hpp
src/pch/: libbitcoin_server_pch.hpp  zerod_pch.hpp
src/snark/libsnark/common/: profiling.cpp
src/test/: rpc_wallet_tests.cpp
src/wallet/: wallet.h
src/zcash/: meson.build
src/zcash/pch/: zcash_pch.hpp
src/zmq/: meson.build
src/zmq/pch/: libzmq_pch.hpp
zcutil/: build.sh  fetch-params.sh
